--- a/ht.html
+++ b/ht.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/margin.css">
   <title>Tip Calculator</title>
 </head>
 
@@ -50,7 +49,7 @@
     </div>
   </div>
 
-  <script src=js/script.js></script>
+  <script src=js/body.js></script>
 </body>
 
 </html>
